<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/mainLayout" android:background="@drawable/background">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView6"
            android:src="@drawable/dd_logo" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:layout_marginBottom="30dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/dd_title"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true" android:layout_alignParentEnd="true" android:layout_marginTop="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/registrationdevice_label"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>
    <GridLayout
            android:layout_width="300dp"
            android:layout_height="310dp"
            android:background="@drawable/basepanel"
            android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:columnCount="2">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/username_label"
                android:id="@+id/textView4" android:layout_marginTop="85dp" android:layout_marginLeft="20dp"
                android:layout_row="0" android:layout_column="0" android:layout_rowSpan="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/password_label"
                android:id="@+id/textView5" android:layout_row="1" android:layout_column="0"
                android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_rowSpan="1"/>
        <EditText
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:id="@+id/userfield" android:layout_column="1" android:layout_row="0"
                android:layout_marginTop="90dp" android:layout_marginLeft="0dp" android:layout_rowSpan="1"
                android:inputType="textEmailAddress"/>
        <EditText
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pwdfield" android:layout_marginTop="15dp" android:layout_row="1"
                android:layout_column="1" android:layout_rowSpan="1"/>
        <Button
                android:layout_width="181dp"
                android:layout_height="46dp"
                android:text="@string/loginbutton_label"
                android:id="@+id/button" android:background="@drawable/button_background" android:layout_rowSpan="1"
                android:layout_column="0" android:layout_row="2" android:layout_columnSpan="2"
                android:layout_marginLeft="50dp" android:layout_marginTop="20dp" android:onClick="OnClickRegister"/>
    </GridLayout>
</RelativeLayout>