<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/dmlistLayout"
            android:columnCount="3"
            android:background="@drawable/button">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView8"
            android:src="@drawable/opaqueframe"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_columnSpan="1"
            android:layout_rowSpan="4"
            android:layout_marginBottom="10dp"/>

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imgMinion"
            android:src="@drawable/no_pic"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_rowSpan="4"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Minion Name"
            android:id="@+id/txtMinionName"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"
            android:editable="false"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/miniontype_label"
            android:id="@+id/textView13"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="type"
            android:id="@+id/txtMinionType"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/minionlevel_label"
                android:id="@+id/textView17"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="type"
                android:id="@+id/txtMinionLevel"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dmstatus_label"
                android:id="@+id/textView18"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="type"
                android:id="@+id/txtMinionStatus"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

</GridLayout>