<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@drawable/background" android:columnCount="2"
            android:rowCount="4" android:id="@+id/MainLayout">

    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp" android:rowCount="4" android:columnCount="2"
            android:layout_columnSpan="2" android:layout_column="0" android:layout_row="0"
            android:background="@drawable/topborder" android:layout_marginLeft="15dp" android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imgAvatar" android:layout_column="0" android:layout_row="0"
                android:layout_marginTop="10dp" android:layout_marginLeft="10dp"
                android:layout_rowSpan="4"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/registration_label"
                android:id="@+id/textView" android:layout_column="1" android:layout_row="0"
                android:layout_marginLeft="10dp" android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/txtProfileName" android:layout_column="1" android:layout_row="1"
                android:layout_marginLeft="10dp" android:layout_marginTop="5dp"
                android:layout_columnSpan="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/txtProfileTitle" android:layout_column="1" android:layout_row="2"
                android:layout_marginLeft="10dp" android:layout_marginTop="5dp"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"/>

        <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageButton7"
                android:layout_row="3"
                android:layout_column="0"
                android:background="@drawable/infobutton_background"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:onClick="onClickInfo"/>

    </GridLayout>
    <GridLayout android:layout_width="190dp" android:layout_height="250dp" android:layout_column="1"
                android:layout_row="1" android:background="@drawable/leftborder"
                android:layout_marginBottom="10dp" android:layout_marginRight="0dp" android:layout_marginLeft="0dp"
                android:columnCount="2" android:rowCount="10">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alerts_label"
                android:id="@+id/textView2" android:layout_column="0" android:layout_marginRight="0dp"
                android:layout_columnSpan="2" android:layout_marginLeft="45dp"/>
    </GridLayout>
    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp" android:layout_row="2" android:layout_column="0"
            android:layout_marginBottom="0dp" android:layout_columnSpan="2" android:columnCount="4"
            android:rowCount="1">
        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageButton" android:background="@drawable/radarbutton_background" android:layout_row="0"
                android:layout_column="0" android:layout_marginLeft="15dp"
                android:onClick="onClickRadar"/>
        <ImageButton android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/imageButton2"
                     android:background="@drawable/databasebutton_background" android:layout_row="0" android:layout_column="1"
                     android:layout_marginLeft="10dp"
                     android:onClick="onClickLibrary"/>
        <ImageButton android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/imageButton3"
                     android:background="@drawable/minionsbutton_background" android:layout_row="0" android:layout_column="2"
                     android:layout_marginLeft="10dp"
                     android:onClick="onClickMinions"/>
        <ImageButton android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/imageButton4"
                     android:background="@drawable/messagebutton_background" android:layout_row="0" android:layout_column="3"
                     android:layout_marginLeft="10dp"
                     android:onClick="onClickMessages"/>
    </GridLayout>
    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView4" android:src="@drawable/dd_logo" android:layout_row="3"
            android:layout_column="0" android:layout_marginBottom="0dp" android:layout_columnSpan="2"
            android:layout_marginLeft="20dp"/>

    <GridLayout
            android:layout_width="170dp"
            android:layout_height="250dp"
            android:layout_column="0"
            android:layout_row="1"
            android:columnCount="1"
            android:rowCount="2">

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/help_label"
                android:id="@+id/button2"
                android:background="@drawable/button_background"
                android:layout_marginTop="20dp"
                android:onClick="onClickHelp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/config_label"
                android:id="@+id/button3"
                android:background="@drawable/button_background"
                android:layout_marginTop="20dp"
                android:onClick="onClickConfig"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>

    </GridLayout>
</GridLayout>