<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainLayout"
                android:background="@drawable/background">

    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/topborder"
            android:id="@+id/gridLayout2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imgMinion"
                android:src="@drawable/no_pic"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_rowSpan="4"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txtMinionName"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_columnSpan="2"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/miniontype_label"
                android:id="@+id/textView2"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/txtMinionType"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/minionlevel_label"
                android:id="@+id/textView23"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/txtMinionLevel"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dmstatus_label"
                android:id="@+id/textView24"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/txtMinionStatus"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
    </GridLayout>

    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/basepanel"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/gridLayout2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/attacks_label"
                android:id="@+id/textView20"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="###########"
                android:id="@+id/txtAttack1"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="###########"
                android:id="@+id/txtAttack2"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="###########"
                android:id="@+id/txtAttack3"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="###########"
                android:id="@+id/txtAttack4"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"/>
    </GridLayout>
</RelativeLayout>